public/css/calendar.less
/* Layout */

.calendar-controls {
  display: flex;
  justify-content: flex-start;
  align-items: baseline;
  max-width: none;

  .view-mode-switcher {
    margin-left: auto;
    margin-right: auto;
  }
}

.calendar-grid {
  @days: 7;

  .header {
    display: grid;
    grid-gap: 1px;
    border-left: 1px solid transparent;
    border-right: 1px solid transparent;
    grid-template-columns: repeat(@days, minmax(2em, 1fr));

    .column-title {
      text-align: center;
    }
  }

  .sidebar {
    display: grid;

    .row-title {
      text-align: right;
      padding-right: .5em;
      font-size: .857em;

      .hour,
      .week-no {
        display: block;
        margin-top: -.75em;
      }
    }
  }

  .grid:after {
    // Icinga Web has a rule that defines this. This disables it to make both grids overlay each other perfectly
    content: none;
  }

  .grid,
  .overlay {
    grid-gap: 1px;
    border: 1px solid transparent;
  }

  .step,
  .entry {
    > a {
      display: block;
      height: 100%;
      overflow: hidden;
    }
  }

  .entry {
     .content {
       display: flex;
       flex-direction: column;
       padding: .25em;
       height: 100%;
       max-height: 100%;
     }

     .title {
       display: flex;
       flex-wrap: wrap;
       flex: 0 1 auto;
       column-gap: .5em;
       overflow: hidden;

       time,
       .attendee {
         display: block;
       }

       .attendee {
         word-break: break-all;
       }

       .attendee .icon {
         vertical-align: baseline;
       }
     }

     .description {
       height: 0;
       flex: 1 1 auto;
       overflow: hidden;

       p {
         margin: 0;
         overflow: hidden;
         text-overflow: ellipsis;
         .line-clamp(3);
       }
     }
   }
}

.calendar-grid.month {
  @days: 7;
  @weeks: 6;
  @rowsPerDay: 5;
  @columnsPerDay: 48;

  .sidebar {
    grid-template-rows: repeat(@weeks, 1fr);
  }

  .grid,
  .overlay {
    display: grid;
    grid-template-rows: repeat(@weeks * @rowsPerDay, 1fr);
    grid-template-columns: repeat(@days * @columnsPerDay, minmax(0.125em, 1fr));
    overflow: hidden;
  }

  .step {
    grid-row-end: span @rowsPerDay;
    grid-column-end: span @columnsPerDay;

    > a {
      text-align: right;
      padding-right: .25em;
    }
  }
}

.calendar-grid.week {
  @days: 7;
  @hours: 24;
  @rowsPerHour: 2;
  @columnsPerDay: 4;

  .sidebar {
    grid-template-rows: repeat(@hours, 1fr);
  }

  .grid,
  .overlay {
    display: grid;
    grid-template-rows: repeat(@hours * @rowsPerHour, 1fr);
    grid-template-columns: repeat(@days * @columnsPerDay, minmax(2em, 1fr));
  }

  .grid,
  .overlay {
    border-left: none;
  }

  .step {
    grid-column-end: span @columnsPerDay;
    grid-row-end: span @rowsPerHour;
  }
}

.calendar-grid {
  display: grid;

  &.week,
  &.month {
    .header {
      grid-area: ~"1 / 2 / 2 / 3";
    }

    .sidebar {
      grid-area: ~"2 / 1 / 3 / 2";
    }

    .grid,
    .overlay {
      grid-area: ~"2 / 2 / 3 / 3";
    }
  }

  &.week {
    grid-template-columns: 6em auto;
    grid-template-rows: 2.5em auto;
  }
  &.month {
    grid-template-columns: 4em auto;
    grid-template-rows: 1.5em auto;
  }

  .overlay {
    pointer-events: none;

    .entry {
      pointer-events: all;
    }
  }
}

/* Design */

.calendar-controls {
  input[type="month"],
  input[type="week"] {
    background-color: @low-sat-blue;
  }
}

.calendar {
  .calendar-title {
    font-size: 1.5em;
    font-weight: normal;
  }

  .grid {
    background-color: @gray-lighter;
    border-color: @gray-lighter;
  }

  .step {
    background-color: @body-bg-color;
    color: @text-color-light;
  }

  .step,
  .entry {
    > a {
      text-decoration: none;
    }
  }

  .entry {
    border-width: 1px;
    border-style: solid;
    .rounded-corners();

    a:hover {
      opacity: .6;
    }

    .title {
      font-weight: bold;
      color: @text-color;
      mix-blend-mode: screen;
      opacity: .75;

      time {
        font-weight: normal;
      }

      .attendee .icon {
        font-size: .75em;
        opacity: .8;
      }
    }
  }

  .column-title {
    .day-name {
      color: @text-color-light;
      text-transform: uppercase;
    }

    .day-number {
      font-weight: bold;
      font-size: 1.5em;
    }
  }

  .row-title {
    color: @text-color-light;
  }
}

@light-mode: {
  .calendar .entry .title {
    mix-blend-mode: multiply;
  }
};

